2003-05-23  Callum McKenzie  <callum@physics.otago.ac.nz>

	* plait.scm: 
	* fortunes.scm: 
	* eagle_wing.scm: 
	* sol.scm (get-name): Rather than constructing cards from the suit
	and value do them all individually. This is to help the
	translators. The word "the" has also been moved to the beginning of
	the descriptions rather than the format strings.

2003-05-22  Callum McKenzie  <callum@physics.otago.ac.nz>

	* first_law.scm (removable?): More i18n fixes.

	* plait.scm: 
	* fortunes.scm: 
	* eagle_wing.scm: Replaced the case 3 hint with an easier to
	translate case 0 hint.

	* dialog.c (show_hint_dialog): Deprecated case 3 hints since they
	are too hard to translate.

	* first_law.scm (removable?): 
	* sol.scm: i18n fixes, removed the string concatenations.

2003-05-21  Callum McKenzie  <callum@physics.otago.ac.nz>

	* dialog.c (show_select_game_dialog): Select the current game as
	the default. Fixes bug #113113.

2003-05-21  Malcolm Tredinnick <malcolm@commsecure.com.au>

	* Makefile.am: Now that SCHEME_GAMES.h has had its build rules
	removed, it is better not to try and build it.

2003-05-20  Callum McKenzie  <callum@physics.otago.ac.nz>

	* sol.c (new_game): Fixed a warning when trying to put
	game-specific stuff in the help menu.

	* Makefile.am: Removed the code to generate SCHEME_GAMES.h, we
	don't need it anymore.

	* cscmi.c (cscm_init): gettext -> _

	* *.scm: Changed all the "gettext" calls to "_" so we don't have
	to alter intltools.

2003-05-18  Callum McKenzie  <callum@physics.otago.ac.nz>

	* Makefile.am: Arranged for the autogeneration of SCHEME_GAMES.h
	since I don't understand how to get the strings automatically
	extracted from the .scm files using intltool.

2003-05-17  Callum McKenzie  <callum@physics.otago.ac.nz>

	* *.scm: Updated the scheme files to use the new gettext
	call.

	* sol.c: Changed the code so that using --variation to select a
	game only works for that one session. This is an awful hack, but I