@@ -1,3 +1,8 @@
+2003-05-29  Callum McKenzie  <callum@physics.otago.ac.nz>
+
+	* preferences.c (preferences_dialog_show): Use gtk_window_present
+	for the properties dialog.
+
 2003-05-27  Callum McKenzie  <callum@physics.otago.ac.nz>
 
 	* main.c (about_cb): Credits for Herman Mansilla.
