@@ -1,3 +1,9 @@
+2003-05-29  Callum McKenzie  <callum@physics.otago.ac.nz>
+
+	* menu.c (help_about_callback): 
+	* dialog.c (show_preferences_dialog): Use gtk_window_present to
+	display dialogs.
+
 2003-05-23  Callum McKenzie  <callum@physics.otago.ac.nz>
 
 	* plait.scm: 
